--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="pt-br">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -9,20 +9,17 @@
     <title>Hello Borges - Fotografia Profissional | Portfolio</title>
     <meta name="description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em São Paulo." />
     <meta name="author" content="Hello Borges Fotografia" />
-    <meta name="keywords" content="fotógrafa, fotografia profissional, retratos, casamentos, maternidade, família, São Paulo, ensaios fotográficos" />
+    <meta name="keywords" content="fotógrafa, fotografia profissional, retratos, casamentos, maternidade, família, ensaios fotográficos" />
 
     <meta property="og:title" content="Hello Borges - Fotografia Profissional | Portfolio" />
     <meta property="og:description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em São Paulo." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+</head>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src"></script>
-  </body>
+<body>
+<div id="root"></div>
+<script type="module" src="./src/main.tsx"></script>
+</body>
 </html>
