--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Hello Borges - Fotografia Profissional | Portfolio</title>
     <meta name="description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em São Paulo." />
     <meta name="author" content="Hello Borges Fotografia" />
-    <meta name="keywords" content="fotógrafa, fotografia profissional, retratos, casamentos, maternidade, família, ensaios fotográficos" />
+    <meta name="keywords" content="fotógrafa, fotografia profissional, retratos, casamentos, maternidade, família, ensaios fotográficos, Salvador, Petrolina" />
 
     <meta property="og:title" content="Hello Borges - Fotografia Profissional | Portfolio" />
     <meta property="og:description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em São Paulo." />
