corrigindo erro de sicronizacao... definitiva

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Hello Borges - Fotografia Profissional | Portfolio" />
     <meta property="og:description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em São Paulo." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content=/src/assets/logo.png />
 
 </head>
 
