--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <title>Hello Borges - Fotografia Profissional | Portfolio</title>
-    <meta name="description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em São Paulo." />
+    <meta name="description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em Salvador." />
     <meta name="author" content="Hello Borges Fotografia" />
     <meta name="keywords" content="fotógrafa, fotografia profissional, retratos, casamentos, maternidade, família, ensaios fotográficos, Salvador, Petrolina" />
 
     <meta property="og:title" content="Hello Borges - Fotografia Profissional | Portfolio" />
-    <meta property="og:description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em São Paulo." />
+    <meta property="og:description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em Salvador" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content=/src/assets/logo.png />
 
