--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Hello Borges - Fotografia Profissional | Portfolio" />
     <meta property="og:description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em Salvador" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content=/src/assets/preview.jpg />
+    <meta property="og:image" content=/preview.jpg />
 
 </head>
 
