remocao do contador de datas

--- a/index.html
+++ b/index.html
@@ -3,21 +3,28 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">
 
     <title>Hello Borges - Fotografia Profissional | Portfolio</title>
-    <meta name="description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em Salvador." />
+    <meta name="description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em Salvador." />
     <meta name="author" content="Hello Borges Fotografia" />
-    <meta name="keywords" content="fotógrafa, fotografia profissional, retratos, casamentos, maternidade, família, ensaios fotográficos, Salvador, Petrolina" />
+    <meta name="keywords" content="fotógrafa, fotografia profissional, retratos, casamentos, maternidade, família, ensaios fotográficos, Salvador, Petrolina" />
 
+    <!-- Open Graph / Social Preview -->
     <meta property="og:title" content="Hello Borges - Fotografia Profissional | Portfolio" />
-    <meta property="og:description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em Salvador" />
+    <meta property="og:description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em Salvador" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content=/preview.jpg />
+    <meta property="og:image" content="/src/assets/preview.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
 </head>
 
