--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
     <meta name="author" content="Hello Borges Fotografia" />
     <meta name="keywords" content="fotógrafa, fotografia profissional, retratos, casamentos, maternidade, família, ensaios fotográficos, Salvador, Petrolina" />
 
-    <!-- Open Graph / Social Preview -->
     <meta property="og:title" content="Hello Borges - Fotografia Profissional | Portfolio" />
     <meta property="og:description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em Salvador" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/src/assets/preview.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
