nova fonte hero

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville:ital@1&family=Montserrat:wght@100;300&family=Poppins:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Serif+JP:wght@200..900&display=swap&family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
 
     <title>Hello Borges - Fotografia Profissional | Portfolio</title>
     <meta name="description" content="Fotógrafa profissional especializada em retratos, casamentos, maternidade e família. Capturando momentos únicos com elegância e sensibilidade artística em Salvador." />
